
syntax = "proto3";

package oms;


// 业务枚举统一规范：
//  1. 所有枚举的int32形式和pb enum字段编号一致， 其string形式和字段完全一致. 例: CancelTaker = 1，则1是int32形式，"CancelTaker"是string形式
//  2. 所有枚举均包含UndefinedXXX = 0，仅占位，实际中不采用此枚举
//  3. 所有msg只能用int32, string来表示枚举，并且标记字段对应哪种枚举。不能直接使用enum作为字段类型，避免兼容问题。


enum OrderState{
    UndefinedOrderState = 0;
    New = 1;             
    Rejected = 2;        
    PendingNew = 3;      
    PartiallyFilled = 4; 
    Filled = 5;          
    Cancelled = 6;       
}

enum Direction{
    UndefinedDirection = 0;
    Buy = 1;
    Sell = 2;
}

enum TimeInForce{
    UndefinedTIF = 0;
    GTK = 1;
    FOK = 2;
    IOC = 3;
}

enum OrderType{
    UndefinedOrderType = 0;
    Limit = 1;  
    Market = 2;
}

enum STPStrategy{
    UndefinedSTPStrategy = 0;
    CancelTaker = 1;      // 撤销最老订单
    CancelMaker = 2;      // 撤销最新订单
    CancelBoth = 3;        // 撤销两个订单
}

enum BizAction{
    UndefinedBizAction = 0;
    Deposit = 1;
    Withdraw = 2;
    Transfer = 3;   // 账户间划转
    PlaceOrder = 4;
    ReplaceOrder = 5;
    CancelOrder = 6;
    FillOrder = 7;
}

enum AdminAction{
    UndefinedAdminAction = 0;
    TakeSnapshot = 1;
    UpdateTradePairConfig = 2;
}

message TradePair{
    string base = 1;   // 基础币种
    string quote = 2;  // 计价币种
}

message Order{
    string order_id = 1; 
    TradePair trade_pair = 2; 
    int32 direction = 3;        // 对应Direction枚举
    int32 time_in_force = 4;    // 对应TimeInForce枚举
    int32 order_type = 5;   // 对应OrderType枚举
    string price = 6;
    string quantity = 7;
    uint64 create_time = 8; // us
    string client_order_id = 9; // 可选
    int32 stp_strategy = 10; // 对应STPStrategy枚举
    uint64 account_id = 11; 
    bool post_only = 12; // true表示只挂单不吃单
    uint64 trade_id = 13; // 创建订单时初始化，此后不变
    uint64 prev_trade_id = 14;
}


message OrderDetail{
    Order original = 1;
    string current_state = 2; // 对应OrderState枚举
    string filled_quantity = 3;
    uint64 last_trade_id = 4;
    uint64 update_time = 5; // us
}

message OMSAdminCmd{
    int32 admin_action = 1;  // 对应AdminAction枚举
}

message MatchAdminCmd{
    int32 admin_action = 1;  // 对应AdminAction枚举
}

message RpcCmd{
    int32 biz_action = 1; // 对应BizAction枚举
    PlaceOrderReq place_order_req = 2; // biz_action为PlaceOrder时有效
    CancelOrderReq cancel_order_req = 3 ; // biz_action为CancelOrder时有效
}

// 用户发起的交易指令, 经过OMS处理后转发给撮合引擎
message TradeCmd{
    uint64 trade_id = 1;
    uint64 prev_trade_id = 2;
    TradePair trade_pair = 3; // 路由字段
    RpcCmd rpc_cmd = 4;
}

// 成交结果
message FillRecord{
    uint64 match_id = 1;
    uint64 prev_match_id = 2;
    string price = 3;
    string quantity = 4;
    int32 direction = 5;    // 对应Direction枚举
    string taker_order_id = 6;
    string maker_order_id = 7;
    bool is_taker_fulfilled = 8;
    bool is_maker_fulfilled = 9;
    TradePair trade_pair = 10;
    uint64 taker_account_id = 11;    
    uint64 maker_account_id = 12;
    int32 taker_state = 13; // 对应OrderState枚举
    int32 maker_state = 14; // 对应OrderState枚举
}

message CancelResult{
    string order_id = 1;
    uint64 account_id = 2;
    TradePair trade_pair = 3;
    int32 direction = 4; // 对应Direction枚举, 被取消订单的方向
    int32 order_state = 5; // 对应OrderState枚举。此状态为Cancelled则撤单成功
}

// 撮合结果，和一次撮合请求一一对应
message MatchResult{
    uint64 trade_id = 1;
    uint64 prev_trade_id = 2;
    BizAction action = 3; // 对应BizAction枚举, 只用到PlaceOrder, CancelOrder
    bool is_success = 4; // 撮合处理是否成功, 如果失败
    string err_msg = 5; // is_success为false时有效，表示失败原因
    repeated FillRecord records = 6;  // action为PlaceOrder时有效
    CancelResult cancel_result = 7; // action为CancelOrder时有效
}

message BatchMatchRequest{
    TradePair trade_pair = 1;
    repeated TradeCmd cmds = 2;
}

message BatchMatchResult{
    TradePair trade_pair = 1;
    repeated MatchResult results = 2;
}

// ======================================== 账户类
message BalanceItem{
    string currency = 1; // BTC\/USDT等
    string balance = 2; // 总余额, 等于available + frozen
    string available = 3; // 可用于交易
    string frozen = 4; // 冻结余额
    uint64 update_time = 5; // 最后更新时间，us
}

// ======================================== 交易对状态

enum TradePairState{
    UndefinedPairState = 0;
    TradingPair = 1;    // 正常交易
    SuspendedPair = 2;  // 不可交易，但可以撤单
    NewPair = 3;        // 新上线，暂不可交易
}

// ======================================== 配置类
message TradePairConfig{
    string trade_pair = 1;
    string min_price_increment = 2;
    string min_quantity_increment = 3;
    int32 state = 4; // 对应TradePairState枚举
    string volatility_limit = 5; // 价格波动限制百分比，例如0.1表示10%
}

// ======================================== 指令类
message ReplaceOrderCmd{
    string order_id = 1; 
    string new_price = 2;
    string new_quantity = 3;
    uint64 account_id = 4;
}

// ======================================== 非撮合类事件推送
message LevelSnapshot{
    string trade_pair = 1; 
    repeated Order bids = 2; 
    repeated Order asks = 3; 
}

// 订单最新详情
message OrderEvent{
    string base = 1;
    string quote = 2;
    uint64 account_id = 3;
    string order_id = 4;
    int32 direction = 5; // 对应Direction枚举
    string target_qty = 6;
    string filled_qty = 7;
    string price = 8;
    int32 order_state = 9; // 对应OrderState枚举
    string client_order_id = 10;
    uint64 trade_id = 11;
    uint64 prev_trade_id = 12;
    uint64 tx_time = 13; // 下单、最新成交时间戳, 单位us, 用于过滤旧数据
    string order_type = 14; // 对应OrderType枚举
    bool post_only = 15;
    string time_in_force = 16; // 对应TimeInForce枚举
    string stp_strategy = 17; // 对应STPStrategy枚举
    uint64 create_time = 18; // 下单时间，us
}

message BatchOrderEvent{
    repeated OrderEvent events = 1;
}

// 账户余额变更事件
message BalanceEvent{
    uint64 account_id = 1;
    string currency = 2; // 币种
    string deposit = 3; // 可用余额
    string frozen = 4; // 冻结余额
    string balance = 5; // 总余额, 等于available + frozen
    uint64 update_time = 6; // 最后更新时间，us
}

message BatchBalanceEvent{
    repeated BalanceEvent events = 1;
}

// Generate PlaceOrder, ReplaceOrder, CancelOrder, TakeSnapshot

// ======================================== RPC类
message PlaceOrderReq{
    Order order = 1;
}

message PlaceOrderRsp{
}

message CancelOrderReq{
    string order_id = 1;
    uint64 account_id = 2;
    string base = 3;
    string quote = 4;
    int32 direction = 5; // 对应Direction枚举
    string client_order_id = 6;
}

message CancelOrderRsp{
}

message TakeSnapshotReq{
}

message TakeSnapshotRsp{
}

message GetOrderDetailReq{
    string order_id = 1;
    string client_order_id = 2; 
    uint64 account_id = 3;
}

message GetOrderDetailRsp{
    OrderDetail detail = 1;
}

message TransferFreezeReq{
    string transfer_id = 1;
    uint64 account_id = 2;
    string currency = 3;
    string amount = 4;  
}

message TransferFreezeRsp{}

message TransferReq{
    string transfer_id = 1;
    uint64 from_account_id = 2;
    uint64 to_account_id = 3;
    string currency = 4;
    string amount = 5;  
}

message TransferRsp{}

// ======================================== 账户类请求
message GetBalanceReq{
    uint64 account_id = 1;
}

message GetBalanceRsp{
    uint64 account_id = 1;
    repeated BalanceItem balances = 2;
}

// ======================================== 管理类请求
message UpdateTradePairConfigReq{
    TradePairConfig config = 1;
}

message UpdateTradePairConfigRsp{
}

// ================================ 业务类
service OMSService {
    rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderRsp);

    rpc CancelOrder(CancelOrderReq) returns (CancelOrderRsp);

    rpc TransferFreeze(TransferFreezeReq) returns (TransferFreezeRsp);

    rpc Transfer(TransferReq) returns (TransferRsp);

    // 订单查询类
    // 优先按order_id查询，其次按client_order_id查询
    rpc GetOrderDetail(GetOrderDetailReq) returns (GetOrderDetailRsp);

    // Balance类
    rpc GetBalance(GetBalanceReq) returns (GetBalanceRsp);

    // 内部使用
    rpc TakeSnapshot(TakeSnapshotReq) returns (TakeSnapshotRsp);
    rpc UpdateTradePairConfig(UpdateTradePairConfigReq) returns (UpdateTradePairConfigRsp);
}

service MatchEngineService {
    // 内部使用
    rpc take_snapshot(TakeSnapshotReq) returns (TakeSnapshotRsp);
}