syntax = "proto3";

package raft;
import "google/protobuf/empty.proto";


// Node represents a single node in the Raft cluster
message Node {
  // Unique identifier for the node
  uint64 node_id = 1;
  // RPC address for node communication
  string rpc_addr = 2;
}

// LeaderId represents the leader identifier in Raft
message LeaderId {
  uint64 term = 1;
  uint64 node_id = 2;
}

// Vote represents the voting information in Raft leader election
message Vote {
  LeaderId leader_id = 1;
  bool committed = 2;
}

enum EntryType {
  UNKNOWN_TYPE = 0;
  BLANK = 1;
  NORMAL = 2;
  MEMBERSHIP = 3;
} 

message Entry {
  uint64 term = 1;
  uint64 index = 2;
  uint32 entry_type = 3; // 对应EntryType
  // Optional Application data
  bytes data = 4;
  // Optional Membership config
  Membership membership = 5;
}

// NodeIds is a set of NodeIds
message NodeIdSet {
  map<uint64, google.protobuf.Empty> node_ids = 1;
}

// Membership config
message Membership {
  // Joint(includes more than one NodeIdSet) or uniform(one NodeIdSet) config.
  repeated NodeIdSet configs = 1;
  // All of the nodes in the cluster, including voters and learners.
  // A node id that is included in `configs` is a voter, otherwise it is a learner.
  map<uint64, Node> nodes = 2;
}

// LogId represents the log identifier in Raft
message LogId {
  uint64 term = 1;
  uint64 index = 2;
}

// VoteReq represents a request for votes during leader election
message VoteReq {
  Vote vote = 1;
  LogId last_log_id = 2;
}

// VoteRsp represents the response to a vote request
message VoteRsp {
  Vote vote = 1;
  bool vote_granted = 2;
  LogId last_log_id = 3;
}

message AppendEntriesReq {
  // The leader's vote, used to identify the leader, and must be committed
  Vote vote = 1;
  // The previous log id the leader has sent to the follower
  LogId prev_log_id = 2;
  // The entries to be appended to the follower's log
  repeated Entry entries = 3;
  // The leader's last committed log id
  LogId leader_commit = 4;
}

message AppendEntriesRsp {
  // If not None, the follower rejected the AppendEntries request due to having a higher vote.
  // All other fields are valid only when this field is None
  Vote rejected_by = 1;

  // The follower accepts this AppendEntries request's vote, but the prev_log_id conflicts with
  // the follower's log. The leader should retry with a smaller prev_log_id that matches the
  // follower's log.
  //
  // For unary AppendEntries, `last_log_id` is not used for conflicts.
  // For StreamAppend (pipeline replication), `last_log_id` carries the conflict log id.
  bool conflict = 2;

  // If `conflict = false`, the last log id the follower accepted from this request:
  // - None: all input entries were accepted and persisted.
  // - Some: partial success; only entries up to and including this id were accepted.
  //
  // If `conflict = true` in StreamAppend, this is the conflict log id.
  LogId last_log_id = 3;
}

// The first chunk of snapshot transmission, which contains the snapshot meta.
message SnapshotReqMeta {
  Vote vote = 1;
  LogId last_log_id = 2;
  LogId last_membership_log_id = 3;
  Membership last_membership = 4;
  string snapshot_id = 5;
}

// The item of snapshot chunk stream.
//
// The first item contains `meta`, including the leader vote and snapshot-meta.
//
// Since the second item, the chunk contains the snapshot data.
message SnapshotReq {
  oneof payload {
    SnapshotReqMeta meta = 1;
    bytes chunk = 2;
  }
}

// SnapshotRsp
message SnapshotRsp {
  Vote vote = 1;
}

// All the data in a state machine, including user defined data and membership data.
message StateMachineData {
  // The last log id that has been applied to the state machine
  LogId last_applied = 1;

  // User data in a map
  map<string, string> data = 2;

  // The id of the last membership config log entry that is applied.
  LogId last_membership_log_id = 3;

  // The last membership config that is applied.
  Membership last_membership = 4;
}

// InternalService handles internal Raft cluster communication
service Raft {
  // Vote handles vote requests between Raft nodes during leader election
  rpc Vote(VoteReq) returns (VoteRsp) {}

  // AppendEntries handles call related to append entries RPC
  rpc AppendEntries(AppendEntriesReq) returns (AppendEntriesRsp) {}

  // StreamAppend handles streaming append entries for pipeline replication
  rpc StreamAppend(stream AppendEntriesReq) returns (stream AppendEntriesRsp) {}

  // Snapshot handles install snapshot RPC
  rpc Snapshot(stream SnapshotReq) returns (SnapshotRsp) {}
}

// ========================= Control Plane ============================
// InitReq contains the initial set of nodes for cluster initialization
message InitReq {
  // List of initial cluster nodes
  repeated Node nodes = 1;
}

// AddLearnerReq specifies parameters for adding a learner node
message AddLearnerReq {
  // Node to be added as a learner
  Node node = 1;
}

// ChangeMembershipReq specifies parameters for modifying cluster membership
message ChangeMembershipReq {
  // New set of voter node IDs
  repeated uint64 members = 1;
  // Whether to retain existing configuration
  bool retain = 2;
}

message ClientWriteRsp {
  // The log id of the committed log entry.
  LogId log_id = 1;

  // If the committed log entry is a normal one.
  // Rsp data = 2;

  // If the committed log entry is a change-membership entry.
  Membership membership = 3;
}

message MetricsRsp {
  // Cluster membership config
  Membership membership = 1;

  // In this example, only membership is used.
  // Other metrics are just encoded in string for simplicity.
  // In real-world scenarios, metrics should be encoded in a more structured format.
  string other_metrics = 2;
}

// Input to state machine operation
message AppStateMachineInput {
  // User defined application data
  bytes data = 1;
}

// Result from state machine operation
message AppStateMachineOutput {
  // Result data from state machine operation
  bytes data = 1;
}

// ApiService provides the key-value store API operations and Raft cluster management operations
service RaftControlPlane {
  // AddLearner adds a new learner node to the Raft cluster
  rpc AddLearner(AddLearnerReq) returns (ClientWriteRsp) {}

  // ChangeMembership modifies the cluster membership configuration
  rpc ChangeMembership(ChangeMembershipReq) returns (ClientWriteRsp) {}

  // Metrics retrieves cluster metrics and status information
  rpc Metrics(google.protobuf.Empty) returns (MetricsRsp) {}
}